--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,19 +3,19 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/listTitlePrimary</item>
-        <item name="colorPrimaryDark">@color/listTitlePrimary</item>
-        <item name="colorAccent">@color/blue</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="AlertLandingPageTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorPrimary">@color/listTitlePrimary</item>
-        <item name="colorPrimaryDark">@color/listTitlePrimary</item>
-        <item name="colorAccent">@color/blue</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="DeleteAlarmDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/blue</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
 </resources>
