--- a/app/src/main/res/layout/fragment_add_edit_alarm.xml
+++ b/app/src/main/res/layout/fragment_add_edit_alarm.xml
@@ -228,15 +228,16 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginBottom="@dimen/list_padding_vertical_small"
+                android:layout_weight="1"
                 android:text="@string/snooze"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <Switch
+                android:id="@+id/edit_alarm_snooze"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="10dp"/>
+                android:paddingRight="10dp" />
         </LinearLayout>
 
         <View
@@ -249,8 +250,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginBottom="@dimen/list_padding_vertical_small"
+            android:layout_weight="1"
             android:text="@string/titleColor"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -268,83 +269,111 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-                <ImageButton
-                    android:layout_width="wrap_content"
+                <RadioGroup
+                    android:id="@+id/edit_alarm_rdo_g"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/softRed"
-                    android:background="@color/colorBackground"/>
+                    android:orientation="horizontal">
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_softRed"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/softRed"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="true" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/lightOrange"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_lightOrange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/lightOrange"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false"/>
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/softOrange"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_softOrange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/softOrange"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/slightlyCyan"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_slightlyCyan"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/slightlyCyan"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/slightlyGreen"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_slightlyGreen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/slightlyGreen"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/green"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_green"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/green"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/strongCyan"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_strongCyan"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/strongCyan"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/blue"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_blue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/blue"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/moderateBlue"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_moderateBlue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/moderateBlue"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/moderateViolet"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_moderateViolet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/moderateViolet"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_fiber_manual_record_50dp"
-                    android:tint="@color/black"
-                    android:background="@color/colorBackground"/>
+                    <RadioButton
+                        android:id="@+id/edit_alarm_color_black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_fiber_manual_record_50dp"
+                        android:backgroundTint="@color/black"
+                        android:button="@drawable/ic_check_50dp"
+                        android:checked="false" />
+                </RadioGroup>
+
 
             </LinearLayout>
 
