--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,7 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-
+    <dimen name="widget_margin">8dp</dimen>
     <dimen name="list_padding_vertical_small">8dp</dimen>
     <dimen name="fab_margin_default">16dp</dimen>
 
