--- a/app/src/main/res/layout/alarm_row.xml
+++ b/app/src/main/res/layout/alarm_row.xml
@@ -12,14 +12,26 @@
     android:foreground="?selectableItemBackground"
     android:clickable="true">
 
+    <ImageView
+        android:id="@+id/ar_color"
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/custom_gradients_color_1"
+        android:backgroundTint="@color/softRed"/>
+
     <TextView
         android:id="@+id/ar_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:gravity="start|bottom"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignBaseline="@+id/ar_color"
+        android:layout_toRightOf="@+id/ar_color"
+        android:layout_toEndOf="@+id/ar_color"
         android:layout_centerVertical="true"
         tools:text="7:00"/>
 
