--- a/app/src/main/res/layout/alarm_row.xml
+++ b/app/src/main/res/layout/alarm_row.xml
@@ -20,7 +20,8 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:background="@drawable/custom_gradients_color_1" />
+        android:background="@drawable/custom_gradients_color_1"
+        android:backgroundTint="@color/softRed"/>
 
     <TextView
         android:id="@+id/ar_time"
