필요없는 layout 및 drawble 정리, 아이콘 및 타이틀 테마 색상 수정

--- a/app/src/main/res/drawable/custom_gradients_color_1.xml
+++ b/app/src/main/res/drawable/custom_gradients_color_1.xml
@@ -38,28 +38,28 @@
         android:startColor="#D9ECC7"
         android:type="linear" />
 
-    <!--  22  -->
-    <gradient
-        android:angle="135"
-        android:endColor="#CCFBFF"
-        android:startColor="#EF96C5"
-        android:type="linear" />
+<!--    &lt;!&ndash;  22  &ndash;&gt;-->
+<!--    <gradient-->
+<!--        android:angle="135"-->
+<!--        android:endColor="#CCFBFF"-->
+<!--        android:startColor="#EF96C5"-->
+<!--        android:type="linear" />-->
 
 
-    <!--  34  -->
-        <gradient
-            android:angle="135"
-            android:endColor="#EAE5C9"
-            android:startColor="#6cc6cb"
-            android:type="linear" />
+<!--    &lt;!&ndash;  34  &ndash;&gt;-->
+<!--        <gradient-->
+<!--            android:angle="135"-->
+<!--            android:endColor="#EAE5C9"-->
+<!--            android:startColor="#6cc6cb"-->
+<!--            android:type="linear" />-->
 
     <!--If your shape requires only one solid color-->
     <!--<solid
         android:color="#FFFFFF" />-->
 
     <size
-        android:width="10dp"
-        android:height="82dp" />
+        android:width="88dp"
+        android:height="88dp" />
 
     <!--Use android:dashWidth="2dp" and android:dashGap="2dp"
     to add dashes to your stroke-->
