--- a/app/src/main/res/drawable/weather_bg_gradient.xml
+++ b/app/src/main/res/drawable/weather_bg_gradient.xml
@@ -6,4 +6,10 @@
         android:startColor="#FC798E"
         android:endColor="#ACD9FA"
         android:type="linear"/>
+
+    <gradient
+        android:angle="90"
+        android:startColor="#F9957F"
+        android:endColor="#F2F5D0"
+        android:type="linear"/>
 </shape>
