--- a/app/src/main/res/layout/alarm_row.xml
+++ b/app/src/main/res/layout/alarm_row.xml
@@ -1,85 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="?attr/listPreferredItemHeight"
-    android:paddingStart="@dimen/activity_horizontal_margin"
-    android:paddingEnd="@dimen/activity_horizontal_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:clickable="true"
     android:foreground="?selectableItemBackground"
-    android:clickable="true">
+    android:orientation="horizontal"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin">
 
     <ImageView
         android:id="@+id/ar_color"
         android:layout_width="10dp"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:background="@drawable/custom_gradients_color_1"/>
+        android:background="@drawable/custom_gradients_color_1" />
 
     <TextView
         android:id="@+id/ar_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:gravity="start|bottom"
         android:layout_alignBaseline="@+id/ar_color"
-        android:layout_toRightOf="@+id/ar_color"
-        android:layout_toEndOf="@+id/ar_color"
         android:layout_centerVertical="true"
-        tools:text="7:00"/>
+        android:layout_toEndOf="@+id/ar_color"
+        android:layout_toRightOf="@+id/ar_color"
+        android:gravity="start|bottom"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        tools:text="7:00" />
 
     <TextView
         android:id="@+id/ar_am_pm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/ar_time"
+        android:layout_toEndOf="@+id/ar_time"
+        android:layout_toRightOf="@+id/ar_time"
         android:textAllCaps="true"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_alignBaseline="@+id/ar_time"
-        android:layout_toRightOf="@+id/ar_time"
-        android:layout_toEndOf="@+id/ar_time"
-        tools:text="AM"/>
+        tools:text="AM" />
 
 
     <ImageView
         android:id="@+id/ar_repeat_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_repeat_black_24dp"
-        android:layout_toRightOf="@+id/ar_am_pm"
-        android:layout_toEndOf="@+id/ar_am_pm"
         android:layout_alignTop="@+id/ar_time"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
+        android:layout_toEndOf="@+id/ar_am_pm"
+        android:layout_toRightOf="@+id/ar_am_pm"
+        android:src="@drawable/ic_repeat_black_24dp"
+        android:tint="@color/black" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_toRightOf="@+id/ar_repeat_icon"
-        android:layout_toEndOf="@+id/ar_repeat_icon"
-        android:layout_toLeftOf="@+id/ar_icon"
-        android:layout_toStartOf="@+id/ar_icon"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_centerVertical="true">
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_toStartOf="@+id/ar_icon"
+        android:layout_toLeftOf="@+id/ar_icon"
+        android:layout_toEndOf="@+id/ar_repeat_icon"
+        android:layout_toRightOf="@+id/ar_repeat_icon"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/ar_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Get Up"/>
+            tools:text="Get Up" />
 
         <TextView
             android:id="@+id/ar_days"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="M Tu W Th F Sa Su"/>
+            tools:text="M Tu W Th F Sa Su" />
 
     </LinearLayout>
 
@@ -87,11 +87,11 @@
         android:id="@+id/ar_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="12dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:tint="@color/blue"
-        android:src="@drawable/ic_alarm_white_24dp"/>
+        android:padding="12dp"
+        android:src="@drawable/ic_alarm_white_24dp"
+        android:tint="@color/colorPrimary" />
 
 </RelativeLayout>
