--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -125,13 +125,27 @@
                     android:text="날씨상태"
                     android:textSize="30sp" />
 
-                <TextView
-                    android:id="@+id/tvUpdated"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="업데이트날짜"
-                    android:textSize="10sp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvUpdated"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="업데이트날짜"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="10sp" />
+
+                    <ImageButton
+                        android:id="@+id/imgBtnRefresh"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@mipmap/refresh" />
+
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
