--- a/app/src/main/res/drawable/calendar_event_more.xml
+++ b/app/src/main/res/drawable/calendar_event_more.xml
@@ -8,6 +8,6 @@
         android:topRightRadius="6dp" />
     <stroke
         android:width="5px"
-        android:color="#a9dbf0cb" />
+        android:color="@color/colorPrimary" />
 
 </shape>
