--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -3,16 +3,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    sothree:umanoDragView="@+id/dragView"
-    sothree:umanoFadeColor="@android:color/transparent"
-    sothree:umanoOverlay="true"
-    sothree:umanoPanelHeight="@dimen/weather_margin_default"
-    sothree:umanoParallaxOffset="100dp"
-    sothree:umanoScrollableView="@id/recycler"
-    sothree:umanoShadowHeight="4dp"
+    app:umanoDragView="@+id/dragView"
+    app:umanoFadeColor="@android:color/transparent"
+    app:umanoOverlay="true"
+    app:umanoScrollableView="@id/recycler"
+    app:umanoShadowHeight="4dp"
     android:scrollbarStyle="outsideOverlay">
 
     <LinearLayout
@@ -42,12 +39,19 @@
         <EditText
             android:id="@+id/edtContent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="0dp" />
 
         <com.example.myhobbyalarm.view.EmptyRecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/empty_view_text" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
@@ -57,8 +61,8 @@
             android:layout_marginEnd="@dimen/fab_margin_default"
             android:layout_marginRight="@dimen/fab_margin_default"
             android:layout_marginBottom="@dimen/fab_margin_default"
-            sothree:fabSize="auto"
-            sothree:srcCompat="@drawable/ic_alarm_white_24dp" />
+            app:fabSize="auto"
+            app:srcCompat="@drawable/ic_note_add_24dp" />
 
     </LinearLayout>
 
