메인 옵션메뉴 UI색상 수정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,8 @@
     <color name="moderateViolet">#683fb5</color>
     <color name="black">#202020</color>
 
+    <color name="white">#ffffff</color>
+
     <color name="divider">#BDBDBD</color>
     <color name="colorBackground">#00FFFFFF</color>
 </resources>
