--- a/app/src/main/res/menu/main_alarm_menu.xml
+++ b/app/src/main/res/menu/main_alarm_menu.xml
@@ -9,8 +9,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_color"
-        android:icon="@android:drawable/ic_search_category_default"
-        android:iconTint="@color/mdtp_white"
+        android:icon="@drawable/ic_search_36dp"
         android:title="@string/action_color"
         app:showAsAction="ifRoom" />
     <item
